tests/baselines/reference/typeParameterCircularDefault.errors.txt
tests/cases/conformance/types/typeParameters/typeParameterCircularDefault.ts(4,14): error TS2662: Type parameter 'T' has a circular default.
tests/cases/conformance/types/typeParameters/typeParameterCircularDefault.ts(4,21): error TS2662: Type parameter 'U' has a circular default.
tests/cases/conformance/types/typeParameters/typeParameterCircularDefault.ts(7,14): error TS2662: Type parameter 'T' has a circular default.
tests/cases/conformance/types/typeParameters/typeParameterCircularDefault.ts(10,14): error TS2662: Type parameter 'T' has a circular default.
tests/cases/conformance/types/typeParameters/typeParameterCircularDefault.ts(16,14): error TS2662: Type parameter 'T' has a circular default.
tests/cases/conformance/types/typeParameters/typeParameterCircularDefault.ts(16,21): error TS2662: Type parameter 'U' has a circular default.
tests/cases/conformance/types/typeParameters/typeParameterCircularDefault.ts(16,28): error TS2662: Type parameter 'V' has a circular default.
tests/cases/conformance/types/typeParameters/typeParameterCircularDefault.ts(28,10): error TS2662: Type parameter 'T' has a circular default.
tests/cases/conformance/types/typeParameters/typeParameterCircularDefault.ts(28,17): error TS2662: Type parameter 'U' has a circular default.
tests/cases/conformance/types/typeParameters/typeParameterCircularDefault.ts(31,10): error TS2662: Type parameter 'T' has a circular default.
tests/cases/conformance/types/typeParameters/typeParameterCircularDefault.ts(34,10): error TS2662: Type parameter 'T' has a circular default.
tests/cases/conformance/types/typeParameters/typeParameterCircularDefault.ts(40,10): error TS2662: Type parameter 'T' has a circular default.
tests/cases/conformance/types/typeParameters/typeParameterCircularDefault.ts(40,17): error TS2662: Type parameter 'U' has a circular default.
tests/cases/conformance/types/typeParameters/typeParameterCircularDefault.ts(40,24): error TS2662: Type parameter 'V' has a circular default.
tests/cases/conformance/types/typeParameters/typeParameterCircularDefault.ts(43,5): error TS2502: 'p' is referenced directly or indirectly in its own type annotation.
tests/cases/conformance/types/typeParameters/typeParameterCircularDefault.ts(45,10): error TS2662: Type parameter 'T' has a circular default.


==== tests/cases/conformance/types/typeParameters/typeParameterCircularDefault.ts (16 errors) ====
    /** Interfaces **/
    
    // Two-way circular
    interface I1<T = U, U = T> { }
                 ~~~~~
!!! error TS2662: Type parameter 'T' has a circular default.
                        ~~~~~
!!! error TS2662: Type parameter 'U' has a circular default.
    
    // Self-circular
    interface I2<T = T> { }
                 ~~~~~
!!! error TS2662: Type parameter 'T' has a circular default.
    
    // Wrapped circular
    interface I3<T = Array<T>> { }
                 ~~~~~~~~~~~~
!!! error TS2662: Type parameter 'T' has a circular default.
    
    // OK, I guess?
    interface I4<T = U, U = number> { }
    
    // Three-way circular
    interface I5<T = U, U = V, V = T> { }
                 ~~~~~
!!! error TS2662: Type parameter 'T' has a circular default.
                        ~~~~~
!!! error TS2662: Type parameter 'U' has a circular default.
                               ~~~~~
!!! error TS2662: Type parameter 'V' has a circular default.
    
    // Indirect through type query
    var a: I6;
    var b = p.x;
    interface I6<T = typeof b> {
    	x: T;
    }
    
    
    /** Classes **/
    // Two-way circular
    class C1<T = U, U = T> { }
             ~~~~~
!!! error TS2662: Type parameter 'T' has a circular default.
                    ~~~~~
!!! error TS2662: Type parameter 'U' has a circular default.
    
    // Self-circular
    class C2<T = T> { }
             ~~~~~
!!! error TS2662: Type parameter 'T' has a circular default.
    
    // Wrapped circular
    class C3<T = Array<T>> { }
             ~~~~~~~~~~~~
!!! error TS2662: Type parameter 'T' has a circular default.
    
    // OK, I guess?
    class C4<T = U, U = number> { }
    
    // Three-way circular
    class C5<T = U, U = V, V = T> { }
             ~~~~~
!!! error TS2662: Type parameter 'T' has a circular default.
                    ~~~~~
!!! error TS2662: Type parameter 'U' has a circular default.
                           ~~~~~
!!! error TS2662: Type parameter 'V' has a circular default.
    
    // Indirect through type query
    var p: C6;
        ~
!!! error TS2502: 'p' is referenced directly or indirectly in its own type annotation.
    var n = p.x;
    class C6<T = typeof n> {
             ~~~~~~~~~~~~
!!! error TS2662: Type parameter 'T' has a circular default.
    	x: T;
    }
    